--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
     <div id="app"></div>
     <!--<script src="/dist/js/main.js"></script>-->
-    <script src="/dist/build/build.js"></script>
+    <script src="/dist/build/build.min.js"></script>
 </body>
 
 </html>
