--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 </head>
 <body>
     <div id="app"></div>
-    <!--<script src="/dist/js/main.js"></script>-->
-    <script src="/dist/build/build.min.js"></script>
+    <!--<script src="./dist/js/main.js"></script>-->
+    <script src="./dist/build/build.min.js"></script>
 </body>
 
 </html>
