--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
     <meta charset="utf8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>myReact</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <style>
@@ -34,8 +36,8 @@
 </head>
 <body>
     <div id="app"></div>
-    <!--<script src="./dist/js/main.js"></script>-->
-    <script src="./dist/build/build.min.js"></script>
+    <script src="./dist/js/main.js"></script>
+    <!--<script src="./dist/build/build.min.js"></script>-->
 </body>
 
 </html>
